--- a/src/index.css
+++ b/src/index.css
@@ -28,11 +28,12 @@
   box-sizing: border-box;
 }
 
-body {
+body, html {
   font-family: var(--font-main);
   background-color: var(--bg-color);
   color: var(--text-color);
   overflow-x: hidden;
+  max-width: 100vw;
   -webkit-font-smoothing: antialiased;
 }
 
